--- a/index.html
+++ b/index.html
@@ -18,20 +18,25 @@
         <li><a href="#">Contato</a></li>
       </ul>
     </nav>
-    <a href="#" class="btn-contato">📞 Fale Conosco</a>
+    <a href="#" class="btn-contato">
+      <img src="img/telefone.png" alt="Telefone" class="icon"> Fale Conosco</a>
   </header>
 
   <section class="hero">
     <div class="overlay"></div>
     <div class="hero-content">
-      <h1>Transforme seu futuro com<br>Tecnologia e Educação</h1>
+      <h1>Transforme seu futuro com<br>
+        <span style="color: #ECBA25">Tecnologia e Educação</h1>
       <p>
         Cursos especializados em robótica, computação e muito mais. 
         Além de assistência técnica profissional para todas suas necessidades.
       </p>
       <div class="hero-buttons">
-        <a href="#" class="btn">Nossos Cursos 🎓</a>
-        <a href ="#" class="btn">Serviços</a>
+        <a href="#" class="btn btn-amarelo"> Nossos Cursos
+          <img src="img/togaBLACK.png" alt="toga" class="icon"> </a>
+        <a href ="#" class="btn btn-branco">Serviços
+          <img src="img/seta-direita.png" alt="seta" class="icon">+
+        </a>
       </div>
     </div>
   </section>
