--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
   <section class="hero">
     <div class="overlay"></div>
     <div class="hero-content">
-      <h1>Transforme seu futuro com<br>
-        <span style="color: #ECBA25">Tecnologia e Educação</h1>
-      <p>
+      <h1 class="titulo-branco">Transforme seu futuro com</h1>
+      <h1 class="titulo-amarelo">Tecnologia e Educacao</h1> 
+      <p clas="subtitulo">
         Cursos especializados em robótica, computação e muito mais. 
         Além de assistência técnica profissional para todas suas necessidades.
       </p>
@@ -35,7 +35,7 @@
         <a href="#" class="btn btn-amarelo"> Nossos Cursos
           <img src="img/togaBLACK.png" alt="toga" class="icon"> </a>
         <a href ="#" class="btn btn-branco">Serviços
-          <img src="img/seta-direita.png" alt="seta" class="icon">+
+          <img src="img/seta-direita.png" alt="seta" class="icon">
         </a>
       </div>
     </div>
