--- a/index.html
+++ b/index.html
@@ -19,26 +19,49 @@
       </ul>
     </nav>
     <a href="#" class="btn-contato">
-      <img src="img/telefone.png" alt="Telefone" class="icon"> Fale Conosco</a>
+      <img src="img/telefone.png" alt="Telefone" class="icon"> Fale Conosco
+    </a>
   </header>
 
   <section class="hero">
     <div class="overlay"></div>
     <div class="hero-content">
       <h1 class="titulo-branco">Transforme seu futuro com</h1>
-      <h1 class="titulo-amarelo">Tecnologia e Educacao</h1> 
-      <p clas="subtitulo">
-        Cursos especializados em robótica, computação e muito mais. 
-        Além de assistência técnica profissional para todas suas necessidades.
+      <h1 class="titulo-amarelo">Tecnologia e Educação</h1> 
+      
+      <p class="subtitulo">
+        Cursos especializados em robótica, computação e muito mais. <br>
+        Além de assistência técnica profissional para todas as suas necessidades.
       </p>
+
       <div class="hero-buttons">
-        <a href="#" class="btn btn-amarelo"> Nossos Cursos
-          <img src="img/togaBLACK.png" alt="toga" class="icon"> </a>
-        <a href ="#" class="btn btn-branco">Serviços
+        <a href="#" class="btn btn-amarelo">
+          Nossos Cursos
+          <img src="img/togaBLACK.png" alt="toga" class="icon">
+        </a>
+        <a href ="#" class="btn btn-branco">
+          Serviços
           <img src="img/seta-direita.png" alt="seta" class="icon">
         </a>
       </div>
+
+<div class="cards-container">
+  <div class="card">
+    <img src="img/toga.png" alt="ícone de formatura" class="icone">
+    <h2>500+</h2>
+    <p>Alunos Formados</p>
+  </div>
+
+  <div class="card">
+    <img src="img/toga.png" alt="ícone de livro" class="icone">
+    <h2>120+</h2>
+    <p>Cursos Oferecidos</p>
+  </div>
+</div>
+
+ 
     </div>
   </section>
+  
 </body>
 </html>
