--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>KLIC Informática</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  
+
+  <!-- NAVBAR -->
   <header class="navbar">
     <div class="logo">KLIC INFORMATICA</div>
-    <nav>
+
+    <nav aria-label="Menu principal">
       <ul class="nav-links">
         <li><a href="#">Início</a></li>
         <li><a href="#">Cursos</a></li>
@@ -18,17 +20,20 @@
         <li><a href="#">Contato</a></li>
       </ul>
     </nav>
+
     <a href="#" class="btn-contato">
       <img src="img/telefone.png" alt="Telefone" class="icon"> Fale Conosco
     </a>
   </header>
 
+  <!-- HERO -->
   <section class="hero">
     <div class="overlay"></div>
+
     <div class="hero-content">
       <h1 class="titulo-branco">Transforme seu futuro com</h1>
-      <h1 class="titulo-amarelo">Tecnologia e Educação</h1> 
-      
+      <h1 class="titulo-amarelo">Tecnologia e Educação</h1>
+
       <p class="subtitulo">
         Cursos especializados em robótica, computação e muito mais. <br>
         Além de assistência técnica profissional para todas as suas necessidades.
@@ -36,32 +41,36 @@
 
       <div class="hero-buttons">
         <a href="#" class="btn btn-amarelo">
-          Nossos Cursos
-          <img src="img/togaBLACK.png" alt="toga" class="icon">
+          <img src="img/togaBLACK.png" alt="Toga" class="icon"> Nossos Cursos
         </a>
-        <a href ="#" class="btn btn-branco">
-          Serviços
-          <img src="img/seta-direita.png" alt="seta" class="icon">
+
+        <a href="#" class="btn btn-branco">
+          <img src="img/seta-direita.png" alt="Seta" class="icon"> Nossos Serviços
         </a>
       </div>
 
-<div class="cards-container">
-  <div class="card">
-    <img src="img/toga.png" alt="ícone de formatura" class="icone">
-    <h2>500+</h2>
-    <p>Alunos Formados</p>
-  </div>
+      <!-- CARDS (3 itens como na imagem) -->
+      <div class="cards-container">
+        <div class="card">
+          <img src="img/toga.png" alt="Alunos formados" class="icone">
+          <h2>500+</h2>
+          <p>Alunos formados</p>
+        </div>
 
-  <div class="card">
-    <img src="img/toga.png" alt="ícone de livro" class="icone">
-    <h2>120+</h2>
-    <p>Cursos Oferecidos</p>
-  </div>
-</div>
+        <div class="card">
+          <img src="img/lasca.png" alt="Equipamentos Reparados" class="icone">
+          <h2>1000+</h2>
+          <p>Equipamentos Reparados</p>
+        </div>
 
- 
+        <div class="card">
+          <img src="img/ferramenta.png" alt="Anos de Experiência" class="icone">
+          <h2>20+</h2>
+          <p>Anos de Experiência</p>
+        </div>
+      </div>
     </div>
   </section>
-  
+
 </body>
 </html>
