--- a/Cursos/cursos.html
+++ b/Cursos/cursos.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cursos_carrossel</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styleCurso.css">
 </head>
 <body>
@@ -158,6 +161,6 @@
         </div>
     </div>
 
-    <script src="../Cursos/carrossel.js"></script>
+    <script src="carrossel.js"></script>
 </body>
 </html>
