--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
- <!DOCTYPE html>
- <html lang="pt-br">
- <head>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KLIC INFORMATICA</title>
 
 <!---fontes---->
- <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Open+Sans:wght@400&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700;800&display=swap" rel="stylesheet">
 <!--Arquivo css-->
@@ -20,7 +23,7 @@
     <nav aria-label="Menu principal">
       <ul class="nav-links">
         <li><a href="#">Inicio</a></li>
-        <li><a href="#">Cursos</a></li>
+        <li><a href="#cursos">Cursos</a></li>
         <li><a href="#">Servicos</a></li>
         <li><a href="#">Contato</a></li>
       </ul>
@@ -68,6 +71,135 @@
           <img src="img/contexto.png" alt="Anos de Experiencia" class="icone">
           <h2>20+</h2>
           <p>Anos de Experiencia</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-------CURSOS cards-->
+  <section id="cursos" class="Cursos">
+    <div class="cursos-header">
+      <h2 class="cursos-titulo">Nossos Cursos</h2>
+      <p class="cursos-subtitulo">Descubra opcoes incriveis para o seu aprendizado em tecnologia e robotica</p>
+    </div>
+    <div class="selecaoCurso">
+      <!------card 1----->
+      <div class="cardCurso">
+        <img class="cardC-imagem" src="img/curso-robotica.svg" alt="curso robotica">
+        <div class="cardC-info">
+          <h3 class="cardC-titulo">Curso de Robotica</h3>
+          <p class="cardC-descricao">
+            Aprenda a construir e programar robos do zero. Domine Arduino
+          </p>
+          <div class="curso-info">
+            <span class="curso-item">
+              <i class="fi fi-br-clock"></i>25 horas
+            </span>
+            <span class="curso-item">
+              <i class="fi fi-br-users"></i>12 alunos
+            </span>
+          </div>
+            <h4 class="cardC-subtitulo">O que voce vai aprender:</h4>
+            <div class="cardC-conteudo">
+              <ul>
+                <li>Arduino e Microcontroladores</li>
+                <li>Programacao C++</li>
+                <li>Arduino e Microcontroladores</li>
+                <li>Arduino e Microcontroladores</li>
+              </ul>
+              </div>
+        </div>
+        <div class="cardC-footer">
+          <button class="cardCurso-botao">Saiba Mais</button>
+        </div>
+      </div>
+<!--------card 2---------->
+      <div class="cardCurso">
+        <img class="cardC-imagem" src="img/curso-robotica.svg" alt="curso robotica">
+        <div class="cardC-info">
+          <h3 class="cardC-titulo">Curso de Robotica</h3>
+          <p class="cardC-descricao">
+            Aprenda a construir e programar robos do zero. Domine Arduino
+          </p>
+          <div class="curso-info">
+            <span class="curso-item">
+              <i class="fi fi-br-clock"></i>25 horas
+            </span>
+            <span class="curso-item">
+              <i class="fi fi-br-users"></i>12 alunos
+            </span>
+          </div>
+            <h4 class="cardC-subtitulo">O que voce vai aprender:</h4>
+            <div class="cardC-conteudo">
+              <ul>
+                <li>Arduino e Microcontroladores</li>
+                <li>Programacao C++</li>
+                <li>Arduino e Microcontroladores</li>
+                <li>Arduino e Microcontroladores</li>
+              </ul>
+              </div>
+        </div>
+        <div class="cardC-footer">
+          <button class="cardCurso-botao">Saiba Mais</button>
+        </div>
+      </div>
+<!-------- card 3 ----------->
+      <div class="cardCurso">
+        <img class="cardC-imagem" src="img/curso-robotica.svg" alt="curso robotica">
+        <div class="cardC-info">
+          <h3 class="cardC-titulo">Curso de Robotica</h3>
+          <p class="cardC-descricao">
+            Aprenda a construir e programar robos do zero. Domine Arduino
+          </p>
+          <div class="curso-info">
+            <span class="curso-item">
+              <i class="fi fi-br-clock"></i>25 horas
+            </span>
+            <span class="curso-item">
+              <i class="fi fi-br-users"></i>12 alunos
+            </span>
+          </div>
+            <h4 class="cardC-subtitulo">O que voce vai aprender:</h4>
+            <div class="cardC-conteudo">
+              <ul>
+                <li>Arduino e Microcontroladores</li>
+                <li>Programacao C++</li>
+                <li>Arduino e Microcontroladores</li>
+                <li>Arduino e Microcontroladores</li>
+              </ul>
+              </div>
+        </div>
+        <div class="cardC-footer">
+          <button class="cardCurso-botao">Saiba Mais</button>
+        </div>
+      </div>
+<!-------------card 4----------->
+      <div class="cardCurso">
+        <img class="cardC-imagem" src="img/curso-robotica.svg" alt="curso robotica">
+        <div class="cardC-info">
+          <h3 class="cardC-titulo">Curso de Robotica</h3>
+          <p class="cardC-descricao">
+            Aprenda a construir e programar robos do zero. Domine Arduino
+          </p>
+          <div class="curso-info">
+            <span class="curso-item">
+              <i class="fi fi-br-clock"></i>25 horas
+            </span>
+            <span class="curso-item">
+              <i class="fi fi-br-users"></i>12 alunos
+            </span>
+          </div>
+            <h4 class="cardC-subtitulo">O que voce vai aprender:</h4>
+            <div class="cardC-conteudo">
+              <ul>
+                <li>Arduino e Microcontroladores</li>
+                <li>Programacao C++</li>
+                <li>Arduino e Microcontroladores</li>
+                <li>Arduino e Microcontroladores</li>
+              </ul>
+              </div>
+        </div>
+        <div class="cardC-footer">
+          <button class="cardCurso-botao">Saiba Mais</button>
         </div>
       </div>
     </div>
