--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700;800&display=swap" rel="stylesheet">
+  
 <!--Arquivo css-->
   <link rel="stylesheet" href="style.css"/>
  </head>
@@ -26,6 +27,7 @@
         <li><a href="#cursos">Cursos</a></li>
         <li><a href="#">Servicos</a></li>
         <li><a href="#">Contato</a></li>
+        <li><a href="#localizacao">Localizacao</a></li>
       </ul>
     </nav>
 
@@ -204,5 +206,17 @@
       </div>
     </div>
   </section>
+  <!-- Nova seção de Contato com Mapa -->
+<section id="localizacao" class="Localizacao">
+  <div class="localizacao-header">
+     <!--------Mapa------->
+    <div class="mapa-container">
+     
+
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3601.6077926411936!2d-54.50656670000001!3d-25.4847687!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94f6975885a5b51b%3A0xc0eab1a473311d25!2sKlic%20Informatica!5e0!3m2!1spt-BR!2sbr!4v1760249957168!5m2!1spt-BR!2sbr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+  </div>
+</section>
+
  </body>
  </html>
