aleteraçoes no index e no estilo

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <p class="cursos-subtitulo">Descubra opcoes incriveis para o seu aprendizado em tecnologia e robotica</p>
     </div>
     <div class="selecaoCurso">
-      <!------card 1----->
+        <!------card 1----->
       <div class="cardCurso">
         <img class="cardC-imagem" src="img/curso-robotica.svg" alt="curso robotica">
         <div class="cardC-info">
@@ -116,11 +116,11 @@
       </div>
 <!--------card 2---------->
       <div class="cardCurso">
-        <img class="cardC-imagem" src="img/curso-robotica.svg" alt="curso robotica">
+        <img class="cardC-imagem" src="img/curso-office.svg" alt="curso Office">
         <div class="cardC-info">
-          <h3 class="cardC-titulo">Curso de Robotica</h3>
+          <h3 class="cardC-titulo">Pacote Office Completo</h3>
           <p class="cardC-descricao">
-            Aprenda a construir e programar robos do zero. Domine Arduino
+            Domine Word, Excel e PowerPoint,do basico ao avançado com certificação
           </p>
           <div class="curso-info">
             <span class="curso-item">
@@ -133,10 +133,10 @@
             <h4 class="cardC-subtitulo">O que voce vai aprender:</h4>
             <div class="cardC-conteudo">
               <ul>
-                <li>Arduino e Microcontroladores</li>
-                <li>Programacao C++</li>
-                <li>Arduino e Microcontroladores</li>
-                <li>Arduino e Microcontroladores</li>
+                <li>Word Avançado</li>
+                <li>Excel com Formulas</li>
+                <li>Powerpoint Profissional</li>
+                <li>certificação incluida</li>
               </ul>
               </div>
         </div>
@@ -146,15 +146,15 @@
       </div>
 <!-------- card 3 ----------->
       <div class="cardCurso">
-        <img class="cardC-imagem" src="img/curso-robotica.svg" alt="curso robotica">
+        <img class="cardC-imagem" src="img/curso-digitacao2.png" alt="curso digitacao">
         <div class="cardC-info">
-          <h3 class="cardC-titulo">Curso de Robotica</h3>
+          <h3 class="cardC-titulo">Curso de Digitação</h3>
           <p class="cardC-descricao">
-            Aprenda a construir e programar robos do zero. Domine Arduino
+            Aumente sua velocidade e precisao na digitacao com tecnicas profissionais
           </p>
           <div class="curso-info">
             <span class="curso-item">
-              <i class="fi fi-br-clock"></i>25 horas
+              <i class="fi fi-br-clock"></i>15 horas
             </span>
             <span class="curso-item">
               <i class="fi fi-br-users"></i>12 alunos
@@ -163,10 +163,10 @@
             <h4 class="cardC-subtitulo">O que voce vai aprender:</h4>
             <div class="cardC-conteudo">
               <ul>
-                <li>Arduino e Microcontroladores</li>
-                <li>Programacao C++</li>
-                <li>Arduino e Microcontroladores</li>
-                <li>Arduino e Microcontroladores</li>
+                <li>Tecnica de  Digitação</li>
+                <li>Aumentar Velocidade</li>
+                <li>Postura Correta</li>
+                <li>Exercicios Praticos</li>
               </ul>
               </div>
         </div>
@@ -176,15 +176,15 @@
       </div>
 <!-------------card 4----------->
       <div class="cardCurso">
-        <img class="cardC-imagem" src="img/curso-robotica.svg" alt="curso robotica">
+        <img class="cardC-imagem" src="img/curso-montagem.png" alt="curso montagem">
         <div class="cardC-info">
-          <h3 class="cardC-titulo">Curso de Robotica</h3>
+          <h3 class="cardC-titulo">Montagem e Manutenção de Computadores</h3>
           <p class="cardC-descricao">
-            Aprenda a construir e programar robos do zero. Domine Arduino
+            Torne-se especialista em hardware. Aprenda montagem, diagnostico e reparo de computadores
           </p>
           <div class="curso-info">
             <span class="curso-item">
-              <i class="fi fi-br-clock"></i>25 horas
+              <i class="fi fi-br-clock"></i>30 horas
             </span>
             <span class="curso-item">
               <i class="fi fi-br-users"></i>12 alunos
@@ -193,10 +193,10 @@
             <h4 class="cardC-subtitulo">O que voce vai aprender:</h4>
             <div class="cardC-conteudo">
               <ul>
-                <li>Arduino e Microcontroladores</li>
-                <li>Programacao C++</li>
-                <li>Arduino e Microcontroladores</li>
-                <li>Arduino e Microcontroladores</li>
+                <li>Arquitetura de hardware</li>
+                <li>diagnostico de Problemas</li>
+                <li>Montagem Completa</li>
+                <li>Manutenção preventiva</li>
               </ul>
               </div>
         </div>
