--- a/index.html
+++ b/index.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KLIC INFORMATICA</title>
 
   <!-- Fontes -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Open+Sans:wght@400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Open+Sans:wght@400&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css">
 
-  <link rel="stylesheet" href="style.css"/>
+
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
 
   <!---- NAVBAR ---->
-<header class="navbar">
+  <header class="navbar">
     <div class="logo">KLIC INFORMATICA</div>
     <nav aria-label="Menu principal">
       <ul class="nav-links">
@@ -30,61 +34,64 @@
       </ul>
     </nav>
     <!-- Botão WhatsApp corrigido -->
- <a class="Btn" href="https://wa.me/+5545998387188?text=Oi!%20Vim%20pelo%20site%20e%20gostaria%20de%20saber%20mais%20sobre%20os%20cursos%20e%20servi%C3%A7os%20">
+    <a class="Btn"
+      href="https://wa.me/+5545998387188?text=Oi!%20Vim%20pelo%20site%20e%20gostaria%20de%20saber%20mais%20sobre%20os%20cursos%20e%20servi%C3%A7os%20">
       <div class="sign">
         <svg class="socialSvg whatsappSvg" viewBox="0 0 16 16">
-          <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"></path>
+          <path
+            d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z">
+          </path>
         </svg>
       </div>
       <div class="text">Whatsapp</div>
     </a>
   </header>
-<!---- HERO ---->
-<section class="hero">
-  <div class="overlay"></div>
-  <div class="hero-content">
-    <h1 class="titulo-branco">Transforme seu futuro com</h1>
-    <h1 class="titulo-amarelo">Tecnologia e Educação</h1>
-    <p class="subtitulo">
-      Cursos especializados em robótica, computação e muito mais. <br>
-      Além de assistência técnica profissional para todas as suas necessidades.
-    </p>
+  <!---- HERO ---->
+  <section class="hero">
+    <div class="overlay"></div>
+    <div class="hero-content">
+      <h1 class="titulo-branco">Transforme seu futuro com</h1>
+      <h1 class="titulo-amarelo">Tecnologia e Educação</h1>
+      <p class="subtitulo">
+        Cursos especializados em robótica, computação e muito mais. <br>
+        Além de assistência técnica profissional para todas as suas necessidades.
+      </p>
 
-    <div class="hero-buttons">
-      <button data-ico="￫">Nossos Servicos</button>
-      <button data-ico="￫">Nossos Cursos</button>
+      <div class="hero-buttons">
+        <button data-ico="￫">Nossos Servicos</button>
+        <button data-ico="￫">Nossos Cursos</button>
+      </div>
+
+      <!------ ICONES HERO ---->
+      <div class="cards-container">
+        <div class="cardHero">
+          <img src="img/toga.png" alt="Alunos formados" class="icone">
+          <span class="counter" data-target="500">0</span>
+          <p>Alunos formados</p>
+        </div>
+
+        <div class="cardHero">
+          <img src="img/lasca.png" alt="Equipamentos Reparados" class="icone">
+          <span class="counter" data-target="1000">0</span>
+          <p>Equipamentos Reparados</p>
+        </div>
+
+        <div class="cardHero">
+          <img src="img/contexto.png" alt="Anos de Experiencia" class="icone">
+          <span class="counter" data-target="20">0</span>
+          <p>Anos de Experiencia</p>
+        </div>
+      </div>
     </div>
+  </section>
 
-    <!------ ICONES HERO ---->
-    <div class="cards-container">
-      <div class="cardHero">
-        <img src="img/toga.png" alt="Alunos formados" class="icone">
-        <span class="counter" data-target="500">0</span>
-        <p>Alunos formados</p>
-      </div>
-
-      <div class="cardHero">
-        <img src="img/lasca.png" alt="Equipamentos Reparados" class="icone">
-        <span class="counter" data-target="1000">0</span>
-        <p>Equipamentos Reparados</p>
-      </div>
-
-      <div class="cardHero">
-        <img src="img/contexto.png" alt="Anos de Experiencia" class="icone">
-        <span class="counter" data-target="20">0</span>
-        <p>Anos de Experiencia</p>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!------- CURSOS ---->
-<section id="cursos" class="area-cursos">
-  <div class="cursos-bloco">
-    <header class="cursos-header">
-      <h2>Nossos Cursos</h2>
-      <p>Invista no seu futuro com nossos cursos especializados em tecnologia e capacitação profissional.</p>
-    </header>
+  <!------- CURSOS ---->
+  <section id="cursos" class="area-cursos">
+    <div class="cursos-bloco">
+      <header class="cursos-header">
+        <h2>Nossos Cursos</h2>
+        <p>Invista no seu futuro com nossos cursos especializados em tecnologia e capacitação profissional.</p>
+      </header>
 
       <div class="carrossel-cursos" aria-label="Carrossel de cursos">
         <button class="btn-carrossel-curso btn-curso-prev" aria-label="Cursos anteriores">
@@ -96,9 +103,8 @@
 
             <!-- CARD 1 -->
             <article class="card-curso">
-              <img class="img-curso"
-                   src="https://i.ibb.co/5gHcm3Ld/Gemini-Generated-Image-x0pqxtx0pqxtx0pq.png"
-                   alt="Pessoa usando notebook com múltiplos monitores">
+              <img class="img-curso" src="https://i.ibb.co/5gHcm3Ld/Gemini-Generated-Image-x0pqxtx0pqxtx0pq.png"
+                alt="Pessoa usando notebook com múltiplos monitores">
               <div class="corpo-curso">
                 <h3 class="titulo-curso">Pacote Office Completo</h3>
                 <p class="subtitulo-curso">
@@ -134,8 +140,7 @@
 
             <!-- CARD 2 -->
             <article class="card-curso">
-              <img class="img-curso"
-                   src="https://i.ibb.co/7xjsR3fw/pexels-vanessa-loring-7869048-1.png">
+              <img class="img-curso" src="https://i.ibb.co/7xjsR3fw/pexels-vanessa-loring-7869048-1.png">
               <div class="corpo-curso">
                 <h3 class="titulo-curso">Curso de Robótica</h3>
                 <p class="subtitulo-curso">
@@ -171,9 +176,7 @@
 
             <!-- CARD 3 -->
             <article class="card-curso">
-              <img class="img-curso"
-                   src="https://i.ibb.co/M51yK7qF/curso-digitacao2.png"
-                   alt="curso digitacao">
+              <img class="img-curso" src="https://i.ibb.co/M51yK7qF/curso-digitacao2.png" alt="curso digitacao">
               <div class="corpo-curso">
                 <h3 class="titulo-curso">Curso de Digitação</h3>
                 <p class="subtitulo-curso">
@@ -208,8 +211,9 @@
             </article>
 
             <!-- CARD 4 -->
-          <article class="card-curso">
-              <img class="img-curso" src="https://i.ibb.co/F4J8Xxc1/curso-computacao.jpg" alt="Curso de Computação Completa">
+            <article class="card-curso">
+              <img class="img-curso" src="https://i.ibb.co/F4J8Xxc1/curso-computacao.jpg"
+                alt="Curso de Computação Completa">
               <div class="corpo-curso">
                 <h3 class="titulo-curso">Curso de Computação Completa</h3>
                 <p class="subtitulo-curso">
@@ -217,7 +221,8 @@
                 </p>
                 <div class="linha-info-curso">
                   <div class="item-info-curso"><span class="icone-info-curso">⏱</span><span>30 horas</span></div>
-                  <div class="item-info-curso"><span class="icone-info-curso">👥</span><span>10 alunos por turma</span></div>
+                  <div class="item-info-curso"><span class="icone-info-curso">👥</span><span>10 alunos por turma</span>
+                  </div>
                 </div>
                 <p class="titulo-parte-curso">O que você vai aprender:</p>
                 <ul class="lista-curso">
@@ -230,16 +235,14 @@
               <div class="rodape-curso">
                 <button class="botao-curso"><span>Saiba Mais</span><span class="icone-seta-curso">➜</span></button>
               </div>
-            </article> 
+            </article>
             <!-- CARD 5 -->
             <article class="card-curso">
-              <img class="img-curso"
-                   src="https://i.ibb.co/XrR1mrB0/curso-montagem.jpg"
-                   alt="curso montagem ">
+              <img class="img-curso" src="https://i.ibb.co/XrR1mrB0/curso-montagem.jpg" alt="curso montagem ">
               <div class="corpo-curso">
                 <h3 class="titulo-curso">Montagem e Manutenção de Computadores</h3>
                 <p class="subtitulo-curso">
-                 Curso prático de montagem e manutenção de computadores
+                  Curso prático de montagem e manutenção de computadores
                 </p>
 
                 <div class="linha-info-curso">
@@ -268,11 +271,10 @@
                 </button>
               </div>
             </article>
-                        <!-- CARD 6 -->
+            <!-- CARD 6 -->
             <article class="card-curso">
-              <img class="img-curso"
-                   src="https://i.ibb.co/bwk4Vwz/1913bcdf-b4e3-45c9-8c7f-13ce8b4d01bf.jpg"
-                   alt="curso adm">
+              <img class="img-curso" src="https://i.ibb.co/bwk4Vwz/1913bcdf-b4e3-45c9-8c7f-13ce8b4d01bf.jpg"
+                alt="curso adm">
               <div class="corpo-curso">
                 <h3 class="titulo-curso">Auxiliar de Administração</h3>
                 <p class="subtitulo-curso">
@@ -319,9 +321,10 @@
   <section id="localizacao" class="Localizacao">
     <div class="localizacao-header">
       <div class="mapa-container">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3601.6077926411936!2d-54.50656670000001!3d-25.4847687!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94f6975885a5b51b%3A0xc0eab1a473311d25!2sKlic%20Informatica!5e0!3m2!1spt-BR!2sbr!4v1760249957168!5m2!1spt-BR!2sbr"
-                width="100%" height="450" style="border:0;" allowfullscreen=""
-                loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3601.6077926411936!2d-54.50656670000001!3d-25.4847687!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94f6975885a5b51b%3A0xc0eab1a473311d25!2sKlic%20Informatica!5e0!3m2!1spt-BR!2sbr!4v1760249957168!5m2!1spt-BR!2sbr"
+          width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </div>
   </section>
@@ -567,18 +570,19 @@
             </div>
             <div>
               <h4>Telefone</h4>
-              <p>(11) 1234-56789<br>(11) 98765-4321</p>
+              <p>(45) 99805-5483<br>(45) 99806-7877<br>(45) 3577-1057</p>
             </div>
           </div>
 
           <!-- WhatsApp -->
           <div class="contato-info-item">
             <div class="contato-info-icon">
-              <i class="fi fi-br-whatsapp"></i>
+              <i class="fi fi-brands-whatsapp"></i>
+
             </div>
             <div>
               <h4>WhatsApp</h4>
-              <p>(11) 98765-4321<br><span>atendimento rápido via WhatsApp</span></p>
+              <p>(45) 99805-5483<br><span>Atendimento rápido via WhatsApp</span></p>
             </div>
           </div>
 
@@ -589,7 +593,7 @@
             </div>
             <div>
               <h4>E-mail</h4>
-              <p>contato@klicinformatica.com<br>cursos@klicinformatica.com</p>
+              <p> klic.informatica.foz@gmail.com </p>
             </div>
           </div>
 
@@ -601,9 +605,9 @@
             <div>
               <h4>Endereço</h4>
               <p>
-                Rua da Tecnologia, 123<br>
-                Centro - Cidade/PR<br>
-                CEP: 12345-678
+                Av. João Ricieri Maran, n 627<br>
+                Três Lagos - Foz do Iguaçu/PR<br>
+                CEP: 85862-425
               </p>
             </div>
           </div>
@@ -616,23 +620,29 @@
             <div>
               <h4>Horário de funcionamento</h4>
               <p>
-                Segunda a Sexta: 8h às 18h<br>
+                Segunda, Quarta e Sexta: 9h às 18h (intervalo 12h às 14h)<br>
+                Terça e Quinta: 9h às 20h <br>
                 Sábado: 8h às 12h<br>
                 Domingo: Fechado
               </p>
+
             </div>
           </div>
 
           <!-- Botões WhatsApp / Ligar -->
           <div class="contato-info-actions">
-            <button class="contato-btn contato-btn-whatsapp">
-              <i class="fi fi-br-whatsapp"></i>
+            <button class="contato-btn contato-btn-whatsapp"
+              onclick="window.open('https://wa.me/+5545998055483?text=Oi!%20Vim%20pelo%20site%20e%20gostaria%20de%20saber%20mais%20sobre%20os%20cursos%20e%20servi%C3%A7os%20', '_blank')">
+              <i class="fi fi-brands-whatsapp"></i>
               Enviar WhatsApp
             </button>
-            <button class="contato-btn contato-btn-call">
-              <i class="fi fi-br-phone-call"></i>
-              Ligar Agora
-            </button>
+
+    <a class="contato-btn contato-btn-call"
+   href="tel:+5545998387188">
+   <i class="fi fi-br-phone-call"></i>
+   Ligar Agora
+</a>
+
           </div>
         </div>
 
@@ -646,6 +656,7 @@
           </div>
 
           <div class="contato-card-body">
+
             <!-- Nome + Telefone -->
             <div class="contato-row contato-row-2">
               <div class="contato-campo">
@@ -654,49 +665,47 @@
               </div>
               <div class="contato-campo">
                 <label>Telefone</label>
-                <input type="text" placeholder="(DD) 99876-5432">
+                <input type="tel" placeholder="(DD)9 9876-5432" inputmode="numeric" pattern="[0-9]*" maxlength="11"
+                  oninput="this.value = this.value.replace(/[^0-9]/g, '')"
+                  title="Digite apenas números (ex: 11998765432)">
+              </div>
+
+              <!-- Email -->
+              <div class="contato-campo">
+                <label>Email</label>
+                <input type="email" placeholder="seu@email.com">
+              </div>
+
+              <!-- Assunto -->
+              <div class="contato-campo">
+                <label>Assunto</label>
+                <input type="text" placeholder="Qual é o assunto da sua mensagem?">
+              </div>
+
+              <!-- Mensagem -->
+              <div class="contato-campo">
+                <label>Mensagem</label>
+                <textarea rows="4" placeholder="Descreva sua dúvida ou necessidade..."></textarea>
               </div>
             </div>
 
-            <!-- Email -->
-            <div class="contato-campo">
-              <label>Email</label>
-              <input type="email" placeholder="seu@email.com">
+            <div class="contato-card-footer">
+              <button type="submit" class="contato-submit">
+                <i class="fi fi-br-paper-plane"></i>
+                Enviar Mensagem
+              </button>
             </div>
-
-            <!-- Assunto -->
-            <div class="contato-campo">
-              <label>Assunto</label>
-              <input type="text" placeholder="Qual é o assunto da sua mensagem?">
-            </div>
-
-            <!-- Mensagem -->
-            <div class="contato-campo">
-              <label>Mensagem</label>
-              <textarea
-                rows="4"
-                placeholder="Descreva sua dúvida ou necessidade..."
-              ></textarea>
-            </div>
-          </div>
-
-          <div class="contato-card-footer">
-            <button type="submit" class="contato-submit">
-              <i class="fi fi-br-paper-plane"></i>
-              Enviar Mensagem
-            </button>
-          </div>
         </form>
       </div>
     </div>
   </section>
 
   <script src="script.js">
-      document.querySelectorAll('.fade-up').forEach(element => {
+    document.querySelectorAll('.fade-up').forEach(element => {
       const text = element.getAttribute('data-text') || element.textContent;
       element.innerHTML = text
         .split('')
-        .map((letra, i) => `<span style="--i:${i+1}">${letra === ' ' ? '&nbsp;' : letra}</span>`)
+        .map((letra, i) => `<span style="--i:${i + 1}">${letra === ' ' ? '&nbsp;' : letra}</span>`)
         .join('');
     });
   </script>
